# LoreWeaver

./: .env.example  .gitignore  README.md  pyproject.toml
Doc/: Extraction_Call_Chain.md  LoreWeaver.md  LoreWeaver_M1_Adjustable_Decisions.md  LoreWeaver_M1_Current_Delivery.md  LoreWeaver_M2_Graph_Design.md  LoreWeaver_Milestone_1.md  LoreWeaver_Milestone_1_Delivery.md  extraction_single_turn_prompt.txt
Doc/Doc_Legacy/: LoreWeaver_Milestone_1.md  LoreWeaver_Milestone_1_Delivery.md
configs/: default.yaml  models.yaml  storage.yaml
data/raw/: DawnSword_Chapter_1_260.txt
loreweaver/: __init__.py  cli.py  config.py  logging.py  progress.py
loreweaver/eval/: corpus.py  generator.py  metrics.py  question_set.py  runner.py
loreweaver/evidence/: __init__.py  assembler.py  citation.py  interval.py
loreweaver/extraction/: batch.py  extractor.py  locator.py  mock_client.py  persistence.py  prompts.py  reports.py  retry.py  schemas.py  selection.py  settings.py  types.py  usage.py  window_processing.py
loreweaver/graph/: center_span.py  edge_builder.py
loreweaver/indexing/: __init__.py  embeddings.py  pipeline.py
loreweaver/ingest/: chapter_splitter.py  normalizer.py  pipeline.py  reader.py  window_splitter.py
loreweaver/model_services/: __init__.py  config.py  errors.py  factory.py  json_utils.py  pricing.py  types.py
loreweaver/models/: __init__.py  chapter.py  cluster.py  document.py  evidence.py  span.py  window.py
loreweaver/qa/: __init__.py  answerer.py  prompts.py
loreweaver/retrieval/: bm25_retriever.py  graph_retriever.py  models.py  pipeline.py  (+4 more)
(+30 files in other folders)
