[project]
name = "loreweaver"
version = "0.1.0"
description = "LLM-driven long-form worldbuilding analysis engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
]

[project.optional-dependencies]
m1 = [
  "qdrant-client>=1.9",
  "rank-bm25>=0.2.2",
  "neo4j>=5.20",
  "openai>=1.30",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]
web = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "jinja2>=3.1",
]

[project.scripts]
loreweaver = "loreweaver.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["loreweaver*"]

[tool.ruff]
line-length = 100
target-version = "py311"
